Last docs update performed on 13/10/2020

--- a/tigahelp/templates/tigahelp/about_us_mk.html
+++ b/tigahelp/templates/tigahelp/about_us_mk.html
@@ -7,7 +7,7 @@ About Us
 
 {% block content %}
 
-<h2>Координирачки субјекти</h2> <p>Предупредување за комарец е управувана од страна на следнве јавни истражувачки
+<h2>Координирачки субјекти</h2> <p>Предупредување за комарец е управувана од страна на следниве јавни истражувачки
     институции: Шпански национален истражувачки Совет - Центар за напредни студии од Бланес (CEAB-CSIC), Центар за
     еколошки истражувања и примена во шумарството (CREAF) и Универзитет Помпеу Фабра (UPF). Институтот за истражувања и
     напредни студии од Каталонија (ICREA) исто така учествува.</p>
@@ -21,8 +21,9 @@ About Us
 <h2>Финасирање и учество во проекти</h2> <p>Предупредување за комарец учествува во конкурентни проекти за истражување,
     проширување на научната комуникација (вклучувајќи го Шпанскиот План Естал, фондацијата ЕУ ХОРИЗОН 2020, "Ла Каикса"
     фондациски проекти, и многу други). Предупредување за комарец исто така се потпира на придонесите од водењето и
-    соработката помеѓу субјектите.</p>  <p>Повеќе информации за ентитетите, соработниците и проектот може да најдете на
-    <a href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>, како и на социјалните мрежи.</p>
+    соработката помеѓу субјектите.</p>
+<p>Повеќе информации за ентитетите, соработниците и проектот може да најдете на <a
+        href="http://www.mosquitoalert.com/en/">www.mosquitoalert.com</a>, како и на социјалните мрежи.</p>
 
 <p class="centeredImage"><img style="max-width: 100%; height: auto;" src="{% static "tigahelp/banner_web.jpg" %}"></p>
 
