--- a/tigahelp/templates/tigahelp/license_mk.html
+++ b/tigahelp/templates/tigahelp/license_mk.html
@@ -2,13 +2,13 @@
 {% load staticfiles %}
 
 {% block page_title %}
-Mosquito Alert License
+Лиценца на Предупредување за комарец
 {% endblock %}
 
 
 {% block content %}
 <div class="center">
-    <h2>Лиценца</h2>
+    <h2>Лиценца на Предупредување за комарец</h2>
 </div>
 
 <p>Предупредување за комарец е систем кој подразбира наука која вклучува граѓани и овозможува соработка помеѓу различни
