--- a/tigahelp/templates/tigahelp/privacy_sr.html
+++ b/tigahelp/templates/tigahelp/privacy_sr.html
@@ -12,35 +12,43 @@ Politika privatnosti
     <h2>Politika privatnosti</h2>
 </div>
 
-<p>Alarm za komarce (pod bilo kojim imenom iz prošlosti ili koje će biti dodeljeno u budućnosti) sakuplja, između
-    ostalog, podatke i fotografije koje su podelili volonteri i omogućavaju njihovu dostupnost trećim strankama i
-    javnosti. U cilju zaštite privatnosti svojih volontera, Alarm za komarce nastoji da izbegne sakupljanje ličnih
-    informacija, što označava informacije koje mogu biti iskorišćne da individualno identifikuju specifičnu prirodu
-    osobe. Stoga, Alarm za komarce zahteva da volonteri ne daju lična imena, adrese, lozinke ili bilo koju drugu ličnu
-    informaciju prilikom slanja izveštaja. Precizne lokacije posmatranja se sakupljaju tokom slanja izveštaja, i ova
-    lokacija može da se poklopi sa preciznom lokacijom volontera, ali ova informacija je vezana samo za izveštaj i
-    nasumično generisanu korisničku šifru (ID). </p> <p>Fotografski metapodaci se ne zahtevaju, a ako su fotografije
-    koje sadrže metapodatke poslate na projekat preko aplikacije, metapodaci će biti obrisani odmah po pristizanju slike
-    na server projekta, sa izuzetkom geolokacije fotografije, što će biti pridruženo fotografiji i može biti
-    objavljeno. </p> <p>Alarm za komarce takođe sakuplja približne lokacije volontera u nasumičnim vremenskim
-    intervalima (u cilju pristupa pokrivenoj geografskoj površini ili površini koju proučava volonter), ali ova
-    informacija je takođe povezana i sa nasumično generisanim korisničkim identifikatorom. Volonteri u izveštaje mogu
-    uključiti napomene i fotografije, ali na svoju odgovornost u te napomene i fotografije ne treba uključivati
-    informacije koje povređuju prava privatnosti drugih ili su u neslaganju sa korisničkim ugovorom Alarma za
-    komarce. </p> <p>Alarm za komarce poseduje mehanizam za sprečavanje širenja <span>što je moguće više ličnih podataka sa javnošću, a koje su </span><span>korisnici poslali greškom, uprkos merama anonimizacije. Isto tako Alarm za komarce primenjuje mere da zaštiti lične podatke koji su podeljeni i da ih eliminiše iz baze podataka, što je više moguće. Uprkos tome, ukoliko se nekim slučajem dogodi da ove mere ne spreče objavljivanje ličnih podataka, ohrabrujemo sve one koji su ih detektovali da prijave odgovornim licima Alarma za komarce, u cilju procesuiranja eliminisanja njihove pojave u javnosti, ukoliko je to moguće. Alarm za komarce ne može garantovati eliminisanje ličnih podataka koje je Alarm za komarce sakupio greškom, uprkos merama anonimizacije, niti može garantovati da takvi podaci neće biti vidljivi za članove Alarma za komarce ili za druge saradnike ili treće stranke. </span>
-</p> <p>Primećeno je da, ukoliko učesnici dele njihova posmatranja (izveštaje) u bilo kom medijumu javnosti, kao što su
+<p>Mosquito Alert (pod bilo kojim imenom iz prošlosti ili koje će biti dodeljeno u budućnosti) sakuplja, između ostalog,
+    podatke i fotografije koje su podelili volonteri i omogućavaju njihovu dostupnost trećim strankama i javnosti. U
+    cilju zaštite privatnosti svojih volontera, Mosquito Alert nastoji da izbegne sakupljanje ličnih informacija, što
+    označava informacije koje mogu biti iskorišćne da individualno identifikuju specifičnu prirodu osobe. Stoga,
+    Mosquito Alert zahteva da volonteri ne daju lična imena, adrese, lozinke ili bilo koju drugu ličnu informaciju
+    prilikom slanja izveštaja. Precizne lokacije posmatranja se sakupljaju tokom slanja izveštaja, i ova lokacija može
+    da se poklopi sa preciznom lokacijom volontera, ali ova informacija je vezana samo za izveštaj i nasumično
+    generisanu korisničku šifru (ID). </p>
+<p>Fotografski metapodaci se ne zahtevaju, a ako su fotografije koje sadrže metapodatke poslate na projekat preko
+    aplikacije, metapodaci će biti obrisani odmah po pristizanju slike na server projekta, sa izuzetkom geolokacije
+    fotografije, što će biti pridruženo fotografiji i može biti objavljeno. </p>
+<p>Mosquito Alert takođe sakuplja približne lokacije volontera u nasumičnim vremenskim intervalima (u cilju pristupa
+    pokrivenoj geografskoj površini ili površini koju proučava volonter), ali ova informacija je takođe povezana i sa
+    nasumično generisanim korisničkim identifikatorom. Volonteri u izveštaje mogu uključiti napomene i fotografije, ali
+    na svoju odgovornost u te napomene i fotografije ne treba uključivati informacije koje povređuju prava privatnosti
+    drugih ili su u neslaganju sa korisničkim ugovorom Mosquito Alert. </p>
+<p>Alarm za komarce poseduje mehanizam za sprečavanje širenja što je moguće više ličnih podataka sa javnošću, a koje su
+    korisnici poslali greškom, uprkos merama anonimizacije. Isto tako Mosquito Alert primenjuje mere da zaštiti lične
+    podatke koji su podeljeni i da ih eliminiše iz baze podataka, što je više moguće. Uprkos tome, ukoliko se nekim
+    slučajem dogodi da ove mere ne spreče objavljivanje ličnih podataka, ohrabrujemo sve one koji su ih detektovali da
+    prijave odgovornim licima Mosquito Alert, u cilju procesuiranja eliminisanja njihove pojave u javnosti, ukoliko je
+    to moguće. Alarm za komarce ne može garantovati eliminisanje ličnih podataka koje je Mosquito Alert sakupio greškom,
+    uprkos merama anonimizacije, niti može garantovati da takvi podaci neće biti vidljivi za članove Alarma za komarce
+    ili za druge saradnike ili treće stranke. </p>
+<p>Primećeno je da, ukoliko učesnici dele njihova posmatranja (izveštaje) u bilo kom medijumu javnosti, kao što su
     društvene mreže, oni mogu da pridružuju njihova posmatranja njihovim ličnim podacima (npr. lični nalog na društvenim
-    mrežama), tako odustajući dobrovoljno <span>od anonimnosti koju projekat nastoji da obezbedi.  </span></p> <p>Alarm
-    za komarce dozvoljava učesnicima da zadrže njihove podatke tokom održavanja anonimnosti, kroz autentifikacioni
+    mrežama), tako odustajući dobrovoljno od anonimnosti koju projekat nastoji da obezbedi. </p>
+<p>Mosquito Alert dozvoljava učesnicima da zadrže njihove podatke tokom održavanja anonimnosti, kroz autentifikacioni
     sistem korišćenjem eksterni nalog (email, Facebook, Twitter), kroz Firebase. Ovo omogućava učesnicima sinhronizaciju
     na više uređaja i vraćanje podataka ukoliko deinstaliraju aplikaciju. Ova opcija je dobrovoljna i nije podrazumevano
-    aktivna. U svakom slučaju, informacije sakupljene u Firebase za ovu namenu se ne čuvaju na serverima Alarma za
-    komarce, kao što nisu povezani sa naučnim podacima sakupljenim u Alarmu za komarce, i nisu procesuirani u Alarmu za
-    komarce. </p> <p>Detaljna lista informacija koje sakuplja Alarm za komarce je sledeća: </p>
+    aktivna. U svakom slučaju, informacije sakupljene u Firebase za ovu namenu se ne čuvaju na serverima Mosquito Alert,
+    kao što nisu povezani sa naučnim podacima sakupljenim u Mosquito Alert, i nisu procesuirani u Mosquito Alert. </p>
+<p>Detaljna lista informacija koje sakuplja Mosquito Alert je sledeća: </p>
 <ul>
     <li>Izveštaji koje su sakupili i poslali volonteri u vezi sa razvojnim staništima, ubodima i zabeleženim
-        potencijalnim komarcima (Alarm za komarce je trenutno fokusiran na 5 različitih invazivnih vrsta komaraca), kao
-        i odgovori volontera na pitanja koja su im poslata preko aplikacije. To uključuje preciznu lokaciju volonterovor
+        potencijalnim komarcima (Mosquito Alert je trenutno fokusiran na 5 različitih invazivnih vrsta komaraca), kao i
+        odgovori volontera na pitanja koja su im poslata preko aplikacije. To uključuje preciznu lokaciju volonterovor
         posmatranja i fotografija (kao i lokaciju metapodataka fotografije, ukoliko postoje), napomene ili bilo kakve
         informacije koje je volonter dodao izveštaju.
     </li>
