--- a/tigahelp/templates/tigahelp/project_about_hr.html
+++ b/tigahelp/templates/tigahelp/project_about_hr.html
@@ -37,18 +37,18 @@ About The Project
 
         <h2>Zašto je potreban Mosquito Alert?</h2>
         <p>U posljednjim desetljećima broj invazivnih vrsta i dolazećih oboljenja koja prenose komarci je porastao na
-            globalnoj razini. Nove invazivne vrste, većinom iz roda Aedes zauzele su nova područja i dalje se
-            nastavljaju širiti. Aedes komarci su značajni iz perspektive zdravlja zbog njihove sposobnosti da prenose
-            uzročnike denge, Zike i chikungunya, također domaći komarac (Culex pipiens) značajan je jer može prenijeti
-            uzročnike groznice Zapadnog Nila. Rizik koji komarci predstavljaju za javno zdravlje čini ih dovoljno
-            značajnima da se njihova populacija prati. S obzirom na kompleksnost problema, Mosquito Alert otvara
-            mogućnost nadzora i istraživanja nad komarcima za javnost i tako omogućava suradnju između različitih
+            globalnoj razini. Nove invazivne vrste, većinom iz roda <em>Aedes</em> zauzele su nova područja i dalje se
+            nastavljaju širiti. <em>Aedes</em> komarci su značajni iz perspektive zdravlja zbog njihove sposobnosti da
+            prenose uzročnike denge, Zike i chikungunya, također domaći komarac (<em>Culex pipiens</em>) značajan je jer
+            može prenijeti uzročnike groznice Zapadnog Nila. Rizik koji komarci predstavljaju za javno zdravlje čini ih
+            dovoljno značajnima da se njihova populacija prati. S obzirom na kompleksnost problema, Mosquito Alert
+            otvara mogućnost nadzora i istraživanja nad komarcima za javnost i tako omogućava suradnju između različitih
             činitelja preko aplikacije te drugih platformi i zajednica. </p>
 
         <h2>Kakvi podaci se prikupljaju?</h2>
-        <p>Sakupljaju se podaci o pet različitih vrsta komaraca: tigrasti komarac (Aedes albopictus), komarac žute
-            groznice (Aedes aegypti), japanski komarac (Aedes japonicus), korejski komarac (Aedes koreicus) i domaći
-            komarac (Culex pipiens).</p>
+        <p>Sakupljaju se podaci o pet različitih vrsta komaraca: tigrasti komarac (<em>Aedes albopictus</em>), komarac
+            žute groznice (<em>Aedes aegypti</em>), japanski komarac (<em>Aedes japonicus</em>), korejski komarac (<em>Aedes
+                koreicus</em>) i domaći komarac (<em>Culex pipiens</em>).</p>
 
 
         <p class="centeredImage">
@@ -59,7 +59,8 @@ About The Project
 
 
         <p>Za ove vrste sakupljaju se podaci o odraslim komarcima i njihovim leglima (razvojnim staništima) kao i
-            ubodima. Svi podaci su značajni za bolje razumijevanje ovih vrsta, kao i za njihovo praćenje i suzbijanje.</p>
+            ubodima. Svi podaci su značajni za bolje razumijevanje ovih vrsta, kao i za njihovo praćenje i
+            suzbijanje.</p>
 
 
         <p class="centeredImage">
@@ -68,8 +69,7 @@ About The Project
 
         </p>
 
-        <p>
-            Mosquito Alert također sakuplja približne lokacije uređaja sudionika uzorkujući na tim lokacijama pet puta u
+        <p>Mosquito Alert također sakuplja približne lokacije uređaja sudionika uzorkujući na tim lokacijama pet puta u
             nasumičnim vremenskim intervalima svakog dana, osim ako je sudionik to onemogućio. Lokacije su označene na
             koordinatnoj mreži za 0,025 x 0,025 stupnjeva geografske širine i dužine (otprilike 2x2 km) prije samog
             slanja na server Mosquito Alert. Zbog zaštite privatnosti, jedino je identifikator kvadrata koordinate mreže
