--- a/tigahelp/templates/tigahelp/project_about_sr.html
+++ b/tigahelp/templates/tigahelp/project_about_sr.html
@@ -18,15 +18,15 @@ About The Project
         </div>
 
 
-        <h2>Šta je Alarm za komarce?</h2>
-        <p>Alarm za komarce je platforma o nauci koja uključuje građane, koja omogućava saradnju između različitih
-            učesnika u cilju proučavanja, praćenja i suzbijanja vrsta komaraca koje prenose prouzrokovače denge, Zike,
-            Čikungunje i virusa Zapadnog Nila. </p>
+        <h2>Šta je Mosquito Alert?</h2>
+        <p>Mosquito Alert je platforma o nauci koja uključuje građane, koja omogućava saradnju između raznih učesnika u
+            cilju proučavanja, praćenja i suzbijanja vrsta komaraca koje prenose prouzrokovače denge, Zike, Čikungunje i
+            groznice virusa Zapadnog Nila.</p>
         <p>Projekat daje ključnu ulogu građanima, naučnicima, stručnjacima u oblasti javnog zdravlja i edukatorima.
-            Alarm za komarce dozvoljava svakom da sakuplja i deli podatke (1) i angažuje profesionalne entomologe u
-            proces ocene, koji označavaju izveštaje o komarcima i odgovaraju učesnicima (2). Jedno ocenjeni, podaci
-            postaju dostupni javnosti kroz interaktivne web mape (3). Takođe se oslanja na naučnike (4) i na agente
-            javnog zdravlja (5) u proučavanju i praćenju komaraca prenosioca prouzrokovača oboljenja. </p>
+            Mosquito Alert dozvoljava svakom da sakuplja i deli podatke (1) i angažuje profesionalne entomologe u
+            procesu ocenjivanja, te oni ocenjuju izveštaje o komarcima i odgovaraju učesnicima (2). Jednom ocenjeni,
+            podaci postaju dostupni javnosti kroz interaktivne web mape (3). Takođe se oslanja na naučnike (4) i na
+            agente javnog zdravlja (5) u proučavanju i praćenju komaraca prenosioca prouzrokovača oboljenja.</p>
 
         <p class="centeredImage">
 
@@ -35,19 +35,20 @@ About The Project
         </p>
 
 
-        <h2>Zašto je potreban Alarm za komarce?</h2>
-        <p>U poslednjim decenijama broj invazivnih vrsta i dolazećih oboljenja koja prenose komarci je porastao na
-            globalnom nivou. Nove invazivne vrsta, većinom iz roda Aedes, zaposele su nove teritorije i dalje
-            nastavljaju da se šire. Aedes komarci su značajni iz perspektive zdravlja zbog njihova sposobnost da prenose
-            prouzrokovače denge, Zike i Čikungunje. Takođe, kućni komarac (Culex pipiens) je značajan jer može da
-            prenosi patogena prouzrokovača virusa Zapadnog Nila. Rizik koji komarci predstavljaju za javno zdravlje čini
-            ih dovoljno značajnim da bi se njihova populacija pratila. </p>
-        <p>S obzirom na kompleksnost problema, Alarm za komarce otvara za javnost<span> nadzor nad komarcima i istraživanje, omogućavajući saradnju između različitih činilaca  preko aplikacije i njenih platformi i zajednica. </span>
-        </p>
+        <h2>Zašto je potreban Mosquito Alert?</h2>
+        <p>Tokom poslednjih decenija broj invazivnih vrsta i dolazećih oboljenja koja prenose komarci je porastao na
+            globalnom nivou. Nove invazivne vrste, većinom iz roda Aedes, zaposele su nove teritorije i dalje
+            nastavljaju da se šire. Aedes komarci su značajni iz perspektive zdravlja zbog njihove sposobnosti da
+            prenose prouzrokovače denge, Zike i Čikungunje. Takođe, značajan je kućni komarac (Culex pipiens) jer
+            prenosi patogene prouzrokovače groznice virusa Zapadnog Nila. Rizik koji komarci predstavljaju za javno
+            zdravlje čini ih dovoljno značajnim, čime je praćenje njihove populacije opravdano.</p>
+        <p>S obzirom na kompleksnost problema, Mosquito Alert otvara za javnost nadzor nad komarcima i njihovo
+            proučavanje, omogućavajući saradnju između različitih činilaca preko aplikacije i njenih platformi i
+            zajednica. </p>
         <h2>Kakvi se podaci sakupljaju?</h2>
-        <p>Podaci o 5 različitih vrsta komaraca se sakupljaju: tigrasti komarac (<em>Aedes albopictus</em>), komarac
+        <p>Sakupljaju se podaci o 5 različitih vrsta komaraca: tigrasti komarac (<em>Aedes albopictus</em>), komarac
             žute groznice (<em>Aedes aegypti</em>), japanski komarac (<em>Aedes japonicus</em>), korejski komarac (<em>Aedes
-                koreicus</em>) i kućni komarac (<em>Culex pipiens</em>). </p>
+                koreicus</em>) i kućni komarac (<em>Culex pipiens</em>).</p>
 
 
         <p class="centeredImage">
@@ -57,8 +58,8 @@ About The Project
         </p>
 
 
-        <p>Za ove vrste sakupljaju se podaci o odraslim komarcima i njihovim razvojnim staništima i ubodima. Svi podaci
-            su značajni za bolje razumevanje ovih vrsta, kao i za njihovo praćenje i suzbijanje. </p>
+        <p>Za ove vrste sakupljaju se podaci o odraslim komarcima, zatim o njihovim razvojnim staništima i ubodima. Svi
+            podaci su značajni za bolje razumevanje ovih vrsta, kao i za njihovo praćenje i suzbijanje. </p>
 
 
         <p class="centeredImage">
@@ -68,14 +69,14 @@ About The Project
         </p>
 
 
-        <p>Alarm za komarce takođe sakuplja približne lokacije učesnikovih uređaja, uzorkujući na tim lokacijama 5 puta
-            u nasumičnim vremenskim intervalima svakog dana, osim ukoliko je učesnik to onemogućio. Lokacije su
-            maskirane na koordinatnoj mreži za 0,025 x 0,025 stepeni geografske širine i dužine (otprilike 2 x 2 km) pre
-            samog slanja na server Alarma za komarce. Zbog zaštite privatnosti, identifikator kvadrata koordinatne mreže
-            zapravo ne deli sa Alarmom za komarce preciznu lokaciju. Ova informacija je dragocena sa naučne perspektive,
-            jer omogućava istraživačima bolje procene populacija komaraca, razlikovanje, npr. mesta sa nekoliko komaraca
-            od mesta sa nekoliko učesnika (ali potencijalno sa mnogo komaraca). Lokacija učesnika omogućava informaciju
-            o tome šta je već poznato u ekologiji kao što su uzorkovanja. </p>
+        <p>Mosquito Alert takođe sakuplja približne lokacije sa učesnikovih uređaja, beležeći lokacije 5 puta u
+            nasumičnim vremenskim intervalima svakog dana, osim ukoliko je učesnik to onemogućio. Lokacije su maskirane
+            na koordinatnoj mreži za 0,025 x 0,025 stepeni geografske širine i dužine (otprilike 2 x 2 km) pre samog
+            slanja na server Mosquito Alert aplikacije. Zbog zaštite privatnosti, identifikator kvadrata koordinatne
+            mreže zapravo ne deli sa Mosquito Alert preciznu lokaciju. Ova informacija je dragocena sa naučne
+            perspektive, jer omogućava istraživačima bolje procene populacija komaraca, razlikovanje, npr. mesta sa
+            nekoliko komaraca od mesta sa nekoliko učesnika (ali potencijalno sa mnogo komaraca). Lokacija učesnika
+            obezbeđuje informaciju o tome šta je već poznato u ekologiji kao što su uzorkovanja. </p>
 
 
         <p class="centeredImage">
@@ -88,7 +89,7 @@ About The Project
         <h2>Za šta se koriste podaci?</h2>
         <p>Ovde su neki primeri: </p>
         <ul>
-            <li>Izveštaji koje ljudi šalju Alarmu za komarce su se tokom ranijih godina pokazali efikasni kao sistem za
+            <li>Izveštaji koje ljudi šalju u Mosquito Alert su se tokom ranijih godina pokazali efikasni kao sistem za
                 rano upozoravanje protiv invazije novih vrsta komaraca. Sistem je korišćen za praćenje već zasnovanih
                 populacija komaraca kao i za otkrivanje novih populacija.
             </li>
