--- a/tigahelp/templates/tigahelp/scoring_de.html
+++ b/tigahelp/templates/tigahelp/scoring_de.html
@@ -29,7 +29,7 @@ Information über das Mosquito Alert Punktesystem
         <p>Berichte, die als Berichte über eine Stechmücke verschickt werden, sich aber nach Expertenmeinung als keine
             Stechmücken herausstellen, erhalten keine Punkte. Ein Foto, auf dem Experten die Stechmücke oder den
             Brutplatz nicht identifizieren können, wird ebenfalls nicht bewertet.</p>
-        <p>Durch das Sammeln von Punkten können Sie ein <b>Level</b> aufsteigen :</p>
+        <p>Durch das Sammeln von Punkten kannst du ein <b>Level</b> aufsteigen :</p>
         <ul>
             <li>(1) Anfänger (Beginner)</li>
             <li>(2) Fortgeschrittener (Contributor)</li>
@@ -37,7 +37,7 @@ Information über das Mosquito Alert Punktesystem
             <li>(4) Meister (Master)</li>
             <li>(5) Großmeister (Grandmaster)</li>
         </ul>
-        <p>Diese Symbole zeigen den erreichten Pegel an:</p>
+        <p>Diese Symbole zeigen den erreichten Level an:</p>
         <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
         <h2>Punktefeld</h2>
         <p>Das Ranking wird durch Klicken auf die Punktzahl im Hauptbildschirm aufgerufen. Durch Drücken auf eine
