--- a/tigahelp/templates/tigahelp/scoring_mk.html
+++ b/tigahelp/templates/tigahelp/scoring_mk.html
@@ -35,8 +35,8 @@ Mosquito Alert Score Info
             <li>(1) почетник</li>
             <li>(2) соработник</li>
             <li>(3) експерт</li>
-            <li>(4) мастер</li>
-            <li>(5) гранд-мастер</li>
+            <li>(4) мајстор</li>
+            <li>(5) веле-мајстор</li>
         </ul>
         <p>Овие икони го покажуваат постигнатото ниво:</p>
 
