--- a/tigahelp/templates/tigahelp/scoring_nl.html
+++ b/tigahelp/templates/tigahelp/scoring_nl.html
@@ -32,22 +32,22 @@ Mosquito Alert Score Informatie
             is om een steekmug of broedplaats te identificeren zullen ook geen score ontvangen.</p>
         <p>Door het verzamelen van punten kunt u een <b>level</b> omhoog gaan:</p>
         <ul>
-            <li>(1) Beginner (beginner)</li>
-            <li>(2) Contributor (medewerker)</li>
-            <li>(3) Expert (expert)</li>
-            <li>(4) Master (meester)</li>
-            <li>(5) Grandmaster (grootmeester)</li>
+            <li>(1) <em>Novice</em> (beginner)</li>
+            <li>(2) <em>Contributor</em> (medewerker)</li>
+            <li>(3) <em>Expert</em> (expert)</li>
+            <li>(4) <em>Master</em> (meester)</li>
+            <li>(5) <em>Grandmaster</em> (grootmeester)</li>
         </ul>
         <p>Deze pictogrammen geven het bereikte niveau weer:</p>
 
         <img src="{% static "tigahelp/InfoScoring_half.png" %}" width="100%">
 
         <h2>Punten paneel</h2>
-        <p>De wereldwijde ranglijst is toegankelijk door op de score op het hoofdscherm te klikken. Door op een
-            rankingpositie te drukken, wordt de uitsplitsing van de door de gebruiker behaalde punten weergegeven.</p>
+        <p>De wereldwijde ranglijst is toegankelijk door op de score op het hoofdscherm te klikken. Door op een <em>ranking</em>
+            positie te drukken, wordt de uitsplitsing van de door de gebruiker behaalde punten weergegeven.</p>
         <p>Door te klikken op "Meer details" geeft toegang tot het paneel waar de punten zijn uitgesplitst.</p>
         <p>In dit gedeelte vindt u een lijst van verzonden meldingen met de score die voor elk van hen is behaald. De
-            meldingen zijn interactief, door te klikken krijg je de uitgesplitste score en een uitleg bij de score.</p>
+            meldingen zijn interactief, door te klikken krijgt u de uitgesplitste score en een uitleg bij de score.</p>
 
     </div>
 </div>
