--- a/tigahelp/templates/tigahelp/scoring_tr.html
+++ b/tigahelp/templates/tigahelp/scoring_tr.html
@@ -16,7 +16,7 @@ Mosquito Alert Score Info
         <p>Mosquito Alert'te gerçekleştirilen eylemler, puan şeklinde takdir ve ödüllere sahiptir. Rapor başına puan sayısı, sağlanan bilgilere ve kalitesine bağlı olarak değişir.</p>
         <p>Rapor başına alınabilecek maksimum puanlar şunlardır:</p>
         <ul>
-            <li>İstilacı <em>Aedes</em> Sivrisinek: 20 puan</li>
+            <li>İstilacı Aedes Sivrisinek: 20 puan</li>
             <li>Yaygın (yerli) Sivrisinek: 14 puan</li>
             <li>Mazgallardaki üreme alanı: 20 puan</li>
             <li>Halka açık alandaki diğer üreme alanları: 16 puan</li>
@@ -37,8 +37,8 @@ Mosquito Alert Score Info
 
         <h2>Puan paneli</h2>
         <p>Küresel sıralamaya, ana ekrandaki puana tıklayarak erişilir. Bir sıralama pozisyonuna basmak, kullanıcı tarafından elde edilen puanların dökümünü görüntüler.</p>
-        <p>"Daha fazla ayrıntı" kısmına tıklandığında, puan döklümü paneline erişilir.</p>
-        <p>Bu bölümde, gönderilen her bir raporun kazanılan puan ile bir listesi bulunmaktadır. Raporlar etkileşimlidir, tıkladığınızda puan dökümünü ve nerden puan kazanıldığını görebilirsiniz.</p>
+        <p>"Daha fazla ayrıntı" kısmına tıklandığında, puan dökümü paneline erişilir.</p>
+        <p>Bu bölümde, gönderilen her bir raporun kazanılan puan ile bir listesi bulunmaktadır. Raporlar interaktiftir, tıkladığınızda puan dökümünü ve nerden puan kazanıldığını görebilirsiniz.</p>
 
     </div>
 </div>
