--- a/tigahelp/templates/tigahelp/terms_sr.html
+++ b/tigahelp/templates/tigahelp/terms_sr.html
@@ -12,29 +12,31 @@ Korisnički ugovor
     <h2>Korisnički ugovor</h2>
 </div>
 
-<p>Alarm za komarce (pod bilo kojim imenom u prošlosti ili u budućnosti) je sistem nauke koja uključuje građane, a
-    pokrenuli su je </p> <p>Španski nacionalni istraživački centar Blanes za napredne studije (CEAB-CSIC), Centar za
-    ekološka istraživanja i primene u šumarstvu (CREAF), Pompeu Fabra univerzitet (UPF) i Katalonski institut za
-    istraživanja i napredne studije (ICREA). Španski nacionalni istraživački centar Blanes za napredne studije
-    (CEAB-CSIC), Centar za ekološka istraživanja i primene u šumarstvu (CREAF), Pompeu Fabra univerzitet (UPF) i
-    Katalonski institut za istraživanja i napredne studije (ICREA). </p> <p>Alarm za komarce zavisi kod javnih kolekcija
-    podataka o različitim vrstama komaraca - vektora patogena (prouzrokovača oboljenja). Građani učestvuju slanjem i
-    deljenjem podataka, slika, preko različitih aplikacija Alarma za komarce za mobilne telefone i druge elektronske
-    uređaje. Učesnici moraju biti odrasle osobe ili pod nadzorom odraslih, u skladu sa zakonodavstvom Španije i zakonima
-    njihovih zemalja boravka. </p> <p>Učesnici takođe moraju prihvatiti politiku privatnosti Alarma za komarce, i biti
-    saglasni da prate uslove korišćenja: </p>
+<p>Mosquito Alert (pod bilo kojim imenom u prošlosti ili u budućnosti) je sistem nauke koja uključuje građane, a
+    pokrenuli su je </p>
+<p>Španski nacionalni istraživački centar Blanes za napredne studije (CEAB-CSIC), Centar za ekološka istraživanja i
+    primene u šumarstvu (CREAF), Pompeu Fabra univerzitet (UPF) i Katalonski institut za istraživanja i napredne studije
+    (ICREA). Španski nacionalni istraživački centar Blanes za napredne studije (CEAB-CSIC), Centar za ekološka
+    istraživanja i primene u šumarstvu (CREAF), Pompeu Fabra univerzitet (UPF) i Katalonski institut za istraživanja i
+    napredne studije (ICREA).</p>
+<p>Mosquito Alert zavisi kod javnih kolekcija podataka o različitim vrstama komaraca - vektora patogena (prouzrokovača
+    oboljenja). Građani učestvuju slanjem i deljenjem podataka, slika, preko različitih aplikacija Mosquito Alert za
+    mobilne telefone i druge elektronske uređaje. Učesnici moraju biti odrasle osobe ili pod nadzorom odraslih, u skladu
+    sa zakonodavstvom Španije i zakonima njihovih zemalja boravka. </p>
+<p>Učesnici takođe moraju prihvatiti politiku privatnosti Mosquito Alert, i biti saglasni da prate uslove
+    korišćenja: </p>
 <ol>
     <li>Vrste komaraca sa kojima radi alarm za komarce, mogu biti vektori patogena (oboljenja) kao što su denga,
-        čikungunja i Zika. Alarm za komarce doprinosi borbi protiv ovih oboljenja sakupljajući podatke i fotografije,
+        čikungunja i Zika. Mosquito Alert doprinosi borbi protiv ovih oboljenja sakupljajući podatke i fotografije,
         analizirajući informacije, podižući svest javnosti, prateći komarce i mere suzbijanja komaraca. S obzirom na to
-        da su ove vrste vektori oboljenja, kada učestvujete u Alarmu za komarce morate biti izuzetno oprezni i ne smete
+        da su ove vrste vektori oboljenja, kada učestvujete u Mosquito Alert morate biti izuzetno oprezni i ne smete
         tražiti ove vrste (direktno ili kroz njihova razvojna staništa), naročito na mestima koja su endemična područja
-        za oboljenja koja oni prenose, ili tokom epidemije ovih oboljenja. Učesnici Alarma za komarce mogu uključiti
+        za oboljenja koja oni prenose, ili tokom epidemije ovih oboljenja. Učesnici Mosquito Alert mogu uključiti
         izveštaje o susretu koji su imali sa komarcima tokom svojih normalnih aktivnosti, i menjajući aktivnosti u cilju
-        smanjenja izloženosti komarcima ili njihovim razvojnim staništima. Vi prihvatate da ne biste ni u kom slučaju
-        trebali povećati svoje izlaganje komarcima svojim učešćem na ovom projektu.
+        smanjenja izloženosti komarcima ili njihovim razvojnim staništima. Prihvatate da ni u kom slučaju nećete
+        povećati svoje izlaganje komarcima svojim učešćem na ovom projektu.
     </li>
-    <li>Deljenjem vaših podataka i radova (npr. fotografija) sa Alarmom za komarce, saglasni ste sa uslovima korišćenja,
+    <li>Deljenjem vaših podataka i radova (npr. fotografija) sa Mosquito Alert, saglasni ste sa uslovima korišćenja,
         prihvatate da Vaši radovi (npr. fotografije) budu distribuirane anonimno bez uključivanja Vašeg imena ili
         pseudonima i garantujete institucijama koje su nosioci licence alarma za komarce da je Vaš posao u trajanju,
         jednak primenjivim autorskim pravima na snazi da bi se iskoristio rad bez ikakvih ograničenja i dodelio trećim
@@ -51,11 +53,11 @@ Korisnički ugovor
         i/ili licence će biti uspostavljene za takvo distribuiranje.
     </li>
     <li>Garantujete da imate neophodna legalna prava nad podacima i radovima koje delite sa Alarmom za komarce i da nisu
-        klevetnički, niti povređuju bilo kori uzakon. Učešće u Alarmu za komarce je anonimno da bi se garantovala
-        zaštita privatnosti učesnika. Stoga, garantujete da nećete dodavati nikakve lične informacije o podacima i
-        radovima niti sebe niti trećih stranaka, koje šaljete Alarmu za komarce. Razumeli ste da ti podaci i radovi mogu
-        biti prosleđeni trećim strankama i da Alarm za komarce ne može garantovati mogućnosti eliminisanja nikakvih
-        ličnih podataka koje ste greškom poslali.
+        klevetnički, niti povređuju bilo kori uzakon. Učešće u Mosquito Alert je anonimno da bi se garantovala zaštita
+        privatnosti učesnika. Stoga, garantujete da nećete dodavati nikakve lične informacije o podacima i radovima niti
+        sebe niti trećih stranaka, koje šaljete Alarmu za komarce. Razumeli ste da ti podaci i radovi mogu biti
+        prosleđeni trećim strankama i da Mosquito Alert ne može garantovati mogućnosti eliminisanja nikakvih ličnih
+        podataka koje ste greškom poslali.
     </li>
     <li>Saglasni ste da ćete obeštetiti pojedince, institucije i/ili članove tima Alarma za komarce i saradnike za bilo
         kakvu legalnu i/ili novčanu štetu i bilo kakve druge troškove prouzrokovane kao rezultat kršenja gorepomenutih
